fix: align final content and first content at top and bottom

--- a/src/components/molecules/MinMax/index.module.scss
+++ b/src/components/molecules/MinMax/index.module.scss
@@ -1,7 +1,7 @@
 .blockMinMax {
     display: flex;
     position: absolute;
-    bottom: 170px;
+    bottom: 25%;
     text-shadow: 0px 0px 3px var(--text-shadow);
 
     > :nth-child(1) {
