--- a/src/components/molecules/MinMax/shimmer.module.scss
+++ b/src/components/molecules/MinMax/shimmer.module.scss
@@ -10,7 +10,7 @@
     align-items: center;
     margin: auto;
     position: absolute;
-    bottom: 170px;
+    bottom: 25%;
 
     .temp {
         @include shine;
