--- a/src/pages/index/index.module.scss
+++ b/src/pages/index/index.module.scss
@@ -6,19 +6,19 @@
     align-items: center;
     justify-content: center;
 
+    .icon {
+        position: absolute;
+        top: 25%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
     .block {
         position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-
-        .icon {
-            position: absolute;
-            bottom: 20%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
 
         .description {
             text-shadow: 0px 0px 3px var(--text-shadow);
